--- a/AnimalLocator/AnimalLocator.cls
+++ b/AnimalLocator/AnimalLocator.cls
@@ -1,1 +1,3 @@
-
+<!--
+The Apex class must be called 'AnimalLocator', have a 'getAnimalNameById' method that accepts an Integer and returns a String.
+-->
