--- a/AnimalLocator/AnimalLocator.cls
+++ b/AnimalLocator/AnimalLocator.cls
@@ -15,5 +15,11 @@ public class AnimalLocator {
       HttpRequest request = new HttpRequest();
       request.setEndpoint('https://th-apex-http-callout.herokuapp.com/animals/:id');
       request.setMethod('GET');
+      HttpResponse response = http.send(request);
+      // If the request is successful, parse the JSON response.
+      if (response.getStatusCode() == 200) {
+        // Deserialize the JSON string into collections of primitive data types.
+        Map<Integer, Object>
+      }
   }
 }
